force-app/main/default/objects/Trade_Request__c/Trade_Request__c.object-meta.xml
<CustomObject>
    <description>Stores all trade requests submitted by traders</description>
    <label>Trade Request</label>
    <nameField>
        <displayFormat>TRD-{000000}</displayFormat>
        <label>Trade Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>