force-app/main/default/objects/Trade_Request__c/fields/Actual_Profit__c.field-meta.xml
<CustomField>
    <fullName>Actual_Profit__c</fullName>
    <label>Actual Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>