force-app/main/default/objects/Trade_Request__c/fields/Broker_Account__c.field-meta.xml
<CustomField>
    <fullName>Broker_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Broker Account</label>
    <referenceTo>Broker_Account__c</referenceTo>
    <relationshipLabel>Trade Requests</relationshipLabel>
    <relationshipName>Trade_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>