force-app/main/default/objects/Trade_Request__c/fields/Brokerage_charge__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_charge__c</fullName>
    <label>Brokerage Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>