force-app/main/default/objects/Trade_Request__c/fields/Current_Market_Price_CMP__c.field-meta.xml
<CustomField>
    <fullName>Current_Market_Price_CMP__c</fullName>
    <label>Current Market Price (CMP)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>