force-app/main/default/objects/Trade_Request__c/fields/Entry_Price__c.field-meta.xml
<CustomField>
    <fullName>Entry_Price__c</fullName>
    <label>Entry Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>