force-app/main/default/objects/Trade_Request__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <label>Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSE</fullName>
            </value>
            <value>
                <fullName>BSE</fullName>
            </value>
            <value>
                <fullName>MCX</fullName>
            </value>
            <value>
                <fullName>NCDEX</fullName>
            </value>
            <value>
                <fullName>Binance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>