force-app/main/default/objects/Trade_Request__c/fields/Execution_Completion_Precentage__c.field-meta.xml
<CustomField>
    <fullName>Execution_Completion_Precentage__c</fullName>
    <formula>IF(
Quantity__c &gt; 0,
Total_Executed_Quantity__c / Quantity__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>