force-app/main/default/objects/Trade_Request__c/fields/Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Execution_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Execution Date</label>
    <type>DateTime</type>
</CustomField>