force-app/main/default/objects/Trade_Request__c/fields/Expected_Profit__c.field-meta.xml
<CustomField>
    <fullName>Expected_Profit__c</fullName>
    <label>Expected Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>