force-app/main/default/objects/Trade_Request__c/fields/Margin_Required__c.field-meta.xml
<CustomField>
    <fullName>Margin_Required__c</fullName>
    <label>Margin Required</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>