force-app/main/default/objects/Trade_Request__c/fields/Number_of_Executions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Executions__c</fullName>
    <label>Number of Executions</label>
    <summaryForeignKey>Trade_Execution__c.Trade_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>