force-app/main/default/objects/Trade_Request__c/fields/Position_Value__c.field-meta.xml
<CustomField>
    <fullName>Position_Value__c</fullName>
    <formula>Quantity__c  *  Entry_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>