force-app/main/default/objects/Trade_Request__c/fields/Positional_Loss__c.field-meta.xml
<CustomField>
    <fullName>Positional_Loss__c</fullName>
    <formula>(Entry_Price__c  -  Stop_Loss__c)  *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Positional Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>