force-app/main/default/objects/Trade_Request__c/fields/Risk_Reward_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reward_Ratio__c</fullName>
    <formula>IF (
  AND (
    NOT (ISBLANK (Entry_Price__c)),
    NOT (ISBLANK (Target_Price__c)),
    NOT (ISBLANK (Stop_Loss__c))
  ),
  (Target_Price__c - Entry_Price__c) / (Entry_Price__c - Stop_Loss__c),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Reward Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>