force-app/main/default/objects/Trade_Request__c/fields/Stop_Loss__c.field-meta.xml
<CustomField>
    <fullName>Stop_Loss__c</fullName>
    <label>Stop Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>