force-app/main/default/objects/Trade_Request__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <length>20</length>
    <type>Text</type>
</CustomField>