force-app/main/default/objects/Trade_Request__c/fields/Total_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>Total_Brokerage__c</fullName>
    <label>Total Brokerage</label>
    <summarizedField>Trade_Execution__c.Brokerage__c</summarizedField>
    <summaryForeignKey>Trade_Execution__c.Trade_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>