force-app/main/default/objects/Trade_Request__c/fields/Total_Charges__c.field-meta.xml
<CustomField>
    <fullName>Total_Charges__c</fullName>
    <label>Total Charges</label>
    <summarizedField>Trade_Execution__c.Total_Charges__c</summarizedField>
    <summaryForeignKey>Trade_Execution__c.Trade_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>