force-app/main/default/objects/Trade_Request__c/fields/Total_Executed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Executed_Quantity__c</fullName>
    <label>Total Executed Quantity</label>
    <summarizedField>Trade_Execution__c.Executed_Quantity__c</summarizedField>
    <summaryForeignKey>Trade_Execution__c.Trade_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>