force-app/main/default/objects/Trade_Request__c/fields/Total_Execution_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Execution_Value__c</fullName>
    <label>Total Execution Value</label>
    <summarizedField>Trade_Execution__c.Execution_Value__c</summarizedField>
    <summaryForeignKey>Trade_Execution__c.Trade_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>