force-app/main/default/objects/Trade_Request__c/fields/Trade_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Type__c</fullName>
    <label>Trade Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Cover</fullName>
            </value>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Short Sell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>