force-app/main/default/objects/Trade_Request__c/fields/Trader__c.field-meta.xml
<CustomField>
    <fullName>Trader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trader</label>
    <referenceTo>Trader__c</referenceTo>
    <relationshipLabel>Trade Requests</relationshipLabel>
    <relationshipName>Trade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>