force-app/main/default/objects/Trade_Request__c/fields/Trading_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Trading_Strategy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Strategy</label>
    <referenceTo>Trading_Strategy__c</referenceTo>
    <relationshipLabel>Trade Requests</relationshipLabel>
    <relationshipName>Trade_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>