force-app/main/default/objects/Trade_Request__c/recordTypes/Commodity_Trade.recordType-meta.xml
<RecordType>
    <fullName>Commodity_Trade</fullName>
    <active>true</active>
    <label>Commodity Trade</label>
</RecordType>