force-app/main/default/objects/Trade_Request__c/recordTypes/Crypto_Trade.recordType-meta.xml
<RecordType>
    <fullName>Crypto_Trade</fullName>
    <active>true</active>
    <label>Crypto Trade</label>
</RecordType>