force-app/main/default/objects/Trade_Request__c/recordTypes/Equity_Trade.recordType-meta.xml
<RecordType>
    <fullName>Equity_Trade</fullName>
    <active>true</active>
    <label>Equity Trade</label>
</RecordType>