force-app/main/default/objects/Trade_Request__c/recordTypes/Futures_Trade.recordType-meta.xml
<RecordType>
    <fullName>Futures_Trade</fullName>
    <active>true</active>
    <label>Futures Trade</label>
</RecordType>