force-app/main/default/objects/Trade_Request__c/recordTypes/Options_Trade.recordType-meta.xml
<RecordType>
    <fullName>Options_Trade</fullName>
    <active>true</active>
    <label>Options Trade</label>
</RecordType>