force-app/main/default/objects/Trade_Request__c/validationRules/Entry_Price_must_be_greater_than_Stop_Lo.validationRule-meta.xml
<ValidationRule>
    <fullName>Entry_Price_must_be_greater_than_Stop_Lo</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL (Trade_Type__c, &quot;Buy&quot;), Stop_Loss__c &gt;= Entry_Price__c)</errorConditionFormula>
    <errorMessage>Entry Price must be greater than Stop Loss for Buy trades.</errorMessage>
</ValidationRule>