force-app/main/default/objects/Trade_Request__c/validationRules/Execution_Date_cannot_be_before_Requeste.validationRule-meta.xml
<ValidationRule>
    <fullName>Execution_Date_cannot_be_before_Requeste</fullName>
    <active>true</active>
    <errorConditionFormula>Execution_Date__c  &lt;  Requested_Date__c</errorConditionFormula>
    <errorMessage>Execution Date cannot be before Requested Date</errorMessage>
</ValidationRule>