force-app/main/default/objects/Trade_Request__c/validationRules/Quantity_must_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_must_be_greater_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero.</errorMessage>
</ValidationRule>