force-app/main/default/objects/Trade_Request__c/validationRules/Target_Price_must_be_greater_than_Entry.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Price_must_be_greater_than_Entry</fullName>
    <active>true</active>
    <errorConditionFormula>Target_Price__c   &lt;=  Entry_Price__c</errorConditionFormula>
    <errorDisplayField>Target_Price__c</errorDisplayField>
    <errorMessage>Target Price must be greater than Entry Price.</errorMessage>
</ValidationRule>